# rush

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md
output/: test.csv
src/: lib.rs  main.rs  utils.rs
src/commands/: audiosum.rs  count.rs  cp.rs  imagesum.rs  mod.rs  mv.rs  resize.rs  videosum.rs
src/commands/audio/: mod.rs  resample.rs  shorten.rs  split.rs  summary.rs  trim.rs
src/commands/file/: count.rs  cp.rs  extension.rs  mod.rs  mv.rs
src/commands/image/: duplicates.rs  mod.rs  resize.rs  summary.rs  tessellate.rs  to_landscape.rs  to_portrait.rs
src/commands/table/: mod.rs  schema.rs  summary.rs  to_csv.rs  to_parquet.rs
src/commands/video/: duplicates.rs  extractframes.rs  from_frames.rs  mod.rs  summary.rs  thumbnail.rs  to_frames.rs
tests/: mod.rs  utils.rs
tests/audio/: mod.rs  resample.rs  split.rs  summary.rs  trim.rs
tests/file/: count.rs  extension.rs  mod.rs
tests/image/: duplicates.rs  mod.rs  resize.rs  summary.rs  tessellate.rs  to_landscape.rs  to_portrait.rs
tests/table/: mod.rs  schema.rs  summary.rs  to_csv.rs  to_parquet.rs
tests/video/: duplicates.rs  from_frames.rs  mod.rs  summary.rs  thumbnail.rs  to_frames.rs
