[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ffmpeg-next = "6.1.0"
hound = "3.5.1"
image = "0.24.7"
lofty = "0.17.1"
polars = { version = "0.43.1", features = ["csv", "lazy", "parquet"] }
polars-io = "0.43.1"
polars-lazy = "0.43.1"
rayon = "1.10.0"
rubato = "0.16.0"
walkdir = "2.4.0"
