[package]
name = "rush"
version = "1.0"
edition = "2021"
repository = "https://github.com/giacomopiccinini/rush"
rust-version = "1.81"
authors = ["Giacomo Piccinini <giacomo.piccinini@proton.me>"]
description = "Swiss-army knife for data inspection and manipulation"
license = "MIT"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.4.7", features = ["derive"] }
ffmpeg-next = "6.1.0"
hound = "3.5.1"
image = "0.24.7"
lofty = "0.17.1"
polars = { version = "0.43.1", features = ["csv", "lazy", "parquet"] }
rayon = "1.10.0"
rubato = "0.16.0"
walkdir = "2.4.0"
hashbrown = "0.15.1"
gstreamer-video = "0.23.4"
gstreamer = "0.23.4"
gstreamer-app = "0.23.4"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
